# raycaster

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  rayc  settings.json
assets/maps/: small.json  small.txt  test.json  test.txt
include/: application.h  color.h  common.h  coretimer.h  game.h  graphics.h  input.h  iresource.h  json_parser.h  logger.h  map.h  player.h  profile_timer.h  raycaster.h  resource_loader.h  texture.h  timer.h  utils.h  window.h  world.h
include/mathutils/: mathutils.h  vec2.h
plan/201610/: 1.md  10.md  15.md  18.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
src/: application.cpp  color.h  common.h  coretimer.cpp  game.cpp  graphics.c  graphics.cpp  graphics.h  input.c  input.cpp  input.h  input_parser.cpp  input_parser.h  main.c  main.cpp  map.cpp  map.h  mathutil.c  mathutil.h  mathutils.h  player.cpp  player.h  profile_timer.cpp  raycaster.c  raycaster.cpp  raycaster.h  resource_loader.cpp  texture.cpp  timer.c  timer.cpp  timer.h  util.c  util.h  utils.h  window.c  window.cpp  window.h  world.cpp
src/include/: coretimer.h  graphics.h
src/include/mathutils/: vec2.h
src/mathutils/: mathutils.cpp  vec2.cpp
